--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/working-abroad-page/x-working-abroad.html">
 <link rel="import" href="shared-styles.html">
@@ -19,7 +9,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       display: block;
     }
   </style>
-    <x-working-abroad control-scrolling></x-working-abroad>
+    <!--x-working-abroad control-scrolling></x-working-abroad-->
+    <x-working-abroad></x-working-abroad>
   </template>
 
   <script>
@@ -28,11 +19,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       ready() {
         super.ready();
-        const working = this.shadowRoot.querySelector('x-working-abroad');
-        const scrolling = working.shadowRoot.querySelector("#scrolling");
-        scrolling.classList.add("size-position");
+        // if the app-drawer is opened => move the paper-dialog (scrolling) to the right =>  class size-position)
+        let scrolling = this.shadowRoot.querySelector('x-working-abroad').shadowRoot.querySelector("#scrolling");
+        if (scrolling  && document.querySelector('my-app')._drawerOpened) {
+          scrolling.classList.add("size-position");
+        }
       }
-      }
+    }
 
     window.customElements.define(MyView1.is, MyView1);
     const working= document.querySelector('my-app');
