--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -40,6 +40,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: #212121;
         font-size: 22px;
       }
+
+      /*paper-input input style */
+      input {
+        font: inherit;
+        outline: none;
+        box-shadow: none;
+        border: none;
+        width: auto;
+        text-align: left;
+      }
+
+      /* toolbar CSS */
+
+      .toolbar {
+        @apply --layout-horizontal;
+        @apply --layout-end-justified;
+        background-color: rgba(255, 255, 255, 0.95);
+      }
+
+
     </style>
   </template>
 </dom-module>
